--- a/client/styles/workout-tracker-decoded.css
+++ b/client/styles/workout-tracker-decoded.css
@@ -414,6 +414,11 @@ body {
   margin: 0 auto;
 }
 
+.powered {
+    font-size: 0.75rem !important;
+    letter-spacing: 0.2rem;
+}
+
 .footer-content p {
   margin-bottom: 15px;
   font-size: 0.9rem;
