--- a/client/styles/sign-up-decoded.css
+++ b/client/styles/sign-up-decoded.css
@@ -225,6 +225,11 @@ button:hover {
   margin: 0 auto;
 }
 
+.powered {
+    font-size: 0.75rem !important;
+    letter-spacing: 0.2rem;
+}
+
 .footer-content p {
   margin-bottom: 15px;
   font-size: 0.9rem;
