--- a/client/styles/dashboard-vital.css
+++ b/client/styles/dashboard-vital.css
@@ -1405,6 +1405,11 @@ h6,
   margin: 0 auto;
 }
 
+.powered {
+  font-size: 0.75rem !important;
+  letter-spacing: 0.2rem;
+}
+
 .footer-content p {
   margin-bottom: 15px;
   font-size: 0.9rem;
