--- a/client/styles/nutrition-tracker-vital.css
+++ b/client/styles/nutrition-tracker-vital.css
@@ -453,6 +453,11 @@ exercise-btn,
   margin: 0 auto;
 }
 
+.powered {
+  font-size: 0.75rem !important;
+  letter-spacing: 0.2rem;
+}
+
 .footer-content p {
   margin-bottom: 15px;
   font-size: 0.9rem;
