Increased Dav and KayP logo size

--- a/client/styles/offer-dav.css
+++ b/client/styles/offer-dav.css
@@ -51,11 +51,11 @@ img {
 .header {
     position: relative;
     text-align: center;
-    padding: 10px 15px;
+    padding: 10px 15px 0 15px;
 }
 
 .logo img {
-    max-height: 50px;
+    max-height: 100px;
 }
 
 .fade-in {
